--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>guns</name>
-    <description>guns 的spring boot版本</description>
+    <name>SpringBootDemo</name>
+    <description>学习guns 的spring boot版本</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
