--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>SpringBootDemo</name>
+    <name>SpringBootCharger</name>
     <description>学习guns 的spring boot版本</description>
 
     <parent>
